ADD Dockerfile and dockerize the entire project

--- a/user_interface.ipynb
+++ b/user_interface.ipynb
@@ -23,6 +23,7 @@
    "source": [
     "import asyncio\n",
     "from functions import *\n",
+    "import pandas as pd\n",
     "import time\n",
     "import ipywidgets as widgets\n",
     "from ipywidgets import interactive\n",
@@ -77,9 +78,9 @@
       "views": {
        "grid_default": {
         "col": 0,
-        "height": 6,
+        "height": 9,
         "hidden": false,
-        "row": 5,
+        "row": 0,
         "width": 12
        }
       }
@@ -93,14 +94,18 @@
     "\n",
     "It does so in real time by plotting intuitive graphs to look into the CPU/Memory usage and IO metrics. Ideally, one can filter all of the plots by the name of the docker compose project or - more generally - any string within the name of any of the containers. \n",
     "\n",
-    "## Initial Static Summary\n",
+    "N.B.: from the Docker documentation!\n",
     "\n",
-    "Here's the first global look to the project in table form. "
+    "> The default project name is the basename of the project directory. You can set a custom project name by using the -p command line option or the COMPOSE_PROJECT_NAME environment variable.\n",
+    "\n",
+    "## Overall stats\n",
+    "\n",
+    "The following table allows yout to check the main usage of all the Docker containers running in your machine. If you want to focus on some of them, just use the text box below to filter the containers according to their project name or any string in their names. "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "metadata": {
     "extensions": {
      "jupyter_dashboards": {
@@ -110,7 +115,7 @@
         "col": 0,
         "height": 4,
         "hidden": false,
-        "row": 11,
+        "row": 9,
         "width": 12
        }
       }
@@ -121,7 +126,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "49846f2400f541d4b2113e61cb26b176",
+       "model_id": "5d06c0aec7484d1b94d92429f3620f33",
        "version_major": 2,
        "version_minor": 0
       },
@@ -156,8 +161,7 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 11,
+   "cell_type": "markdown",
    "metadata": {
     "extensions": {
      "jupyter_dashboards": {
@@ -165,10 +169,33 @@
       "views": {
        "grid_default": {
         "col": 0,
-        "height": 14,
+        "height": 2,
+        "hidden": false,
+        "row": 13,
+        "width": 12
+       }
+      }
+     }
+    }
+   },
+   "source": [
+    "A more telling comparison may be achieved by directly comparing across projects their memory and CPU usage:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {
+    "extensions": {
+     "jupyter_dashboards": {
+      "activeView": "grid_default",
+      "views": {
+       "grid_default": {
+        "col": 0,
+        "height": 11,
         "hidden": false,
         "row": 15,
-        "width": 12
+        "width": 11
        }
       }
      }
@@ -178,7 +205,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "8b7e83ffe7204f8a8724aa2194cb73e9",
+       "model_id": "65553d9d5816480486eb2ee7b3c69a8e",
        "version_major": 2,
        "version_minor": 0
       },
@@ -243,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 15,
    "metadata": {
     "extensions": {
      "jupyter_dashboards": {
@@ -264,28 +291,6 @@
    "source": [
     "l = widgets.link((docker, 'value'), (docker_project, 'value'))"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "extensions": {
-     "jupyter_dashboards": {
-      "activeView": "grid_default",
-      "views": {
-       "grid_default": {
-        "col": null,
-        "height": 2,
-        "hidden": true,
-        "row": null,
-        "width": 2
-       }
-      }
-     }
-    }
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
