MODIFY final shape dashboard

--- a/user_interface.ipynb
+++ b/user_interface.ipynb
@@ -27,7 +27,6 @@
     "import time\n",
     "import ipywidgets as widgets\n",
     "from ipywidgets import interactive\n",
-    "import matplotlib.ticker as mtick\n",
     "from datetime import datetime"
    ]
   },
@@ -126,7 +125,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "5d06c0aec7484d1b94d92429f3620f33",
+       "model_id": "3e21ed40bdd3455ba11a8ec3e9c8e4a6",
        "version_major": 2,
        "version_minor": 0
       },
@@ -141,7 +140,7 @@
    "source": [
     "def table_summary(docker_project: str): \n",
     "    docker_stats = run_and_get_docker_stats()\n",
-    "    docker_pandas_stats = read_pandas_dataframe(docker_stats, docker_project=docker_project)\n",
+    "    docker_pandas_stats = read_pandas_dataframe(docker_stats)\n",
     "    \n",
     "    if docker_project != \"all\":\n",
     "        docker_pandas_stats = docker_pandas_stats[docker_pandas_stats['name'].str.contains(docker_project)]\n",
@@ -172,19 +171,19 @@
         "height": 2,
         "hidden": false,
         "row": 13,
-        "width": 12
+        "width": 3
        }
       }
      }
     }
    },
    "source": [
-    "A more telling comparison may be achieved by directly comparing across projects their memory and CPU usage:"
+    "## CPU & Memory Usage"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 6,
    "metadata": {
     "extensions": {
      "jupyter_dashboards": {
@@ -205,7 +204,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "65553d9d5816480486eb2ee7b3c69a8e",
+       "model_id": "65b3b04aa4814c20b942df4688e12225",
        "version_major": 2,
        "version_minor": 0
       },
@@ -218,43 +217,51 @@
     }
    ],
    "source": [
+    "docker_stats = run_and_get_docker_stats()\n",
+    "docker_pandas_stats = read_pandas_dataframe(docker_stats)\n",
+    "\n",
     "def plot_mem_usage(docker_project):\n",
+    "    global docker_pandas_stats\n",
     "    SLEEP = 0.5\n",
     "\n",
     "    all_tasks = asyncio.all_tasks()\n",
     "    for task in all_tasks:\n",
     "        task.cancel()\n",
     "\n",
-    "    fig1, ax = plt.subplots()\n",
-    "    fig1.suptitle(\"Docker Stats data\", fontsize=20)\n",
-    "\n",
-    "    docker_stats = run_and_get_docker_stats()\n",
-    "    docker_pandas_stats = read_pandas_dataframe(docker_stats, docker_project)\n",
+    "    fig1, (ax_ram, ax_cpu) = plt.subplots(1, 2) \n",
+    "    fig1.suptitle(\"Docker Usage data\", fontsize=20)\n",
     "    \n",
     "    if docker_project != \"all\":\n",
-    "        docker_pandas_stats = docker_pandas_stats[docker_pandas_stats['name'].str.contains(docker_project)]\n",
+    "        to_show = docker_pandas_stats[docker_pandas_stats['name'].str.contains(docker_project)]\n",
+    "    else:\n",
+    "        to_show = docker_pandas_stats\n",
     "    \n",
-    "    docker_pandas_stats.plot.barh(y=['memory_percentage', 'cpu_percentange'], x = 'name',\n",
-    "                                         ax = ax)\n",
-    "    ax.set_title(\"Time last updated \" + str(datetime.now()))\n",
-    "    ax.xaxis.set_major_formatter(mtick.PercentFormatter(xmax=1))\n",
-    "    ax.set_xlim([0, 1])\n",
+    "    plot_area('memory_percentage', ax_ram, to_show, \"Memory Usage\")\n",
+    "    plot_area('cpu_percentange', ax_cpu, to_show, \"CPU Usage\")\n",
+    "    \n",
     "    plt.show(fig1)\n",
-    "    ax.cla()\n",
     "    async def do():\n",
+    "        global docker_pandas_stats\n",
     "        while True:\n",
-    "            docker_stats = run_and_get_docker_stats()\n",
-    "            docker_pandas_stats = read_pandas_dataframe(docker_stats, docker_project)\n",
+    "            new_docker_stats = run_and_get_docker_stats()\n",
+    "            new_docker_pandas_stats = read_pandas_dataframe(new_docker_stats)\n",
+    "            \n",
+    "            docker_pandas_stats = pd.concat([docker_pandas_stats, new_docker_pandas_stats])\n",
     "            \n",
     "            if docker_project != \"all\":\n",
-    "                docker_pandas_stats = docker_pandas_stats[docker_pandas_stats['name'].str.contains(docker_project)]\n",
+    "                to_show = docker_pandas_stats[docker_pandas_stats['name'].str.contains(docker_project)]\n",
+    "            else:\n",
+    "                to_show = docker_pandas_stats\n",
+    "                \n",
     "            \n",
-    "            ax.cla()\n",
-    "            docker_pandas_stats.plot.barh(y=['memory_percentage', 'cpu_percentange'], x = 'name',\n",
-    "                                         ax = ax)\n",
-    "            ax.xaxis.set_major_formatter(mtick.PercentFormatter(xmax=1))\n",
-    "            ax.set_xlim([0, 1])\n",
-    "            ax.set_title(\"Time last updated \" + str(datetime.now()))    \n",
+    "            \n",
+    "            ax_ram.cla()\n",
+    "            ax_cpu.cla()\n",
+    "            \n",
+    "            plot_area('memory_percentage', ax_ram, to_show, \"Memory Usage\")\n",
+    "            plot_area('cpu_percentange', ax_cpu, to_show, \"CPU Usage\")\n",
+    "            \n",
+    "            plt.show(fig1)\n",
     "            plt.draw()\n",
     "            await asyncio.sleep(SLEEP)\n",
     "\n",
@@ -270,7 +277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 7,
    "metadata": {
     "extensions": {
      "jupyter_dashboards": {
